[package]
name = "win-say"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.58.0", features = ["Media", "Media_Core", "Media_SpeechSynthesis", "Media_Playback", "Storage_Streams"] }
